// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`build [build].check-deploy installs the built Wasm on PocketIC 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister main
check deploy canister main

✓ Built 1 canister successfully",
}
`;

exports[`build --check-deploy installs the built Wasm on PocketIC 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister main
check deploy canister main

✓ Built 1 canister successfully",
}
`;

exports[`build error 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo
<CACHE>moc-wrapper ["-c","--idl","--stable-types","-o",".mops/.build/foo.wasm","src/Foo.mo","--package","core",".mops/core@1.0.0/src","--release","--public-metadata","candid:service","--public-metadata","candid:args"]
Stable types written to .mops/.build/foo.most
Adding metadata to .mops/.build/foo.wasm

✓ Built 1 canister successfully",
}
`;

exports[`build error 2`] = `
{
  "exitCode": 1,
  "stderr": "Candid compatibility check failed for canister bar",
  "stdout": "build canister bar",
}
`;

exports[`build error 3`] = `
{
  "exitCode": 1,
  "stderr": "Candid compatibility check failed for canister bar",
  "stdout": "build canister foo
build canister bar",
}
`;

exports[`build ok 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo
<CACHE>moc-wrapper ["-c","--idl","--stable-types","-o",".mops/.build/foo.wasm","src/Foo.mo","--package","core",".mops/core@1.0.0/src","--release","--public-metadata","candid:service","--public-metadata","candid:args"]
Stable types written to .mops/.build/foo.most
Adding metadata to .mops/.build/foo.wasm
build canister bar
<CACHE>moc-wrapper ["-c","--idl","--stable-types","-o",".mops/.build/bar.wasm","src/Bar.mo","--package","core",".mops/core@1.0.0/src","--release","--incremental-gc","--public-metadata","candid:service","--public-metadata","candid:args"]
Stable types written to .mops/.build/bar.most
Candid compatibility check passed for canister bar
Adding metadata to .mops/.build/bar.wasm

✓ Built 2 canisters successfully",
}
`;

exports[`build ok 2`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo

✓ Built 1 canister successfully",
}
`;

exports[`build ok 3`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister bar

✓ Built 1 canister successfully",
}
`;

exports[`build ok 4`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "build canister foo
build canister bar

✓ Built 2 canisters successfully",
}
`;

exports[`build check-deploy continues after deterministic migration inconclusive outcomes 1`] = `
{
  "exitCode": 0,
  "stderr": "Warning [MOPS-CHECK-DEPLOY-INCONCLUSIVE]:
Canister: problematic
Result: Fresh PocketIC installation could not be validated.
Reason: This canister has an enhanced migration chain that may require state from a previous deployment. A fresh canister cannot reproduce that baseline.
Impact: The Wasm build succeeded, but deployment check remains unverified.
Suggested action: Validate the upgrade against a canister containing representative baseline state.
Warning [MOPS-CHECK-DEPLOY-INCONCLUSIVE]:
Canister: problematic2
Result: Fresh PocketIC installation could not be validated.
Reason: This canister has an enhanced migration chain that may require state from a previous deployment. A fresh canister cannot reproduce that baseline.
Impact: The Wasm build succeeded, but deployment check remains unverified.
Suggested action: Validate the upgrade against a canister containing representative baseline state.
Deployment check summary: 1 successful, 2 inconclusive.",
  "stdout": "build canister problematic
build canister problematic2
build canister healthy
check deploy canister problematic
check deploy canister problematic2
check deploy canister healthy

✓ Built 3 canisters successfully",
}
`;

exports[`build warns when args contain managed flags 1`] = `
{
  "exitCode": 1,
  "stderr": "Warning: '-o' in args for canister foo may conflict with mops build — use [build].outputDir in mops.toml or --output flag instead
Warning: '-c' in args for canister foo may conflict with mops build — this flag is always set by mops build
Warning: '--idl' in args for canister foo may conflict with mops build — this flag is always set by mops build
Warning: '--stable-types' in args for canister foo may conflict with mops build — this flag is always set by mops build
Error while compiling canister foo
ENOENT: no such file or directory, open '.mops/.build/foo.did'",
  "stdout": "build canister foo",
}
`;
